--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>groupId</groupId>
     <artifactId>nts1801.3</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+    </dependencies>
     
 </project>
