--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
     <groupId>groupId</groupId>
     <artifactId>nts1801.3</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </releases>
+            <id>Experitest.repo1</id>
+            <name>YourName</name>
+            <url>https://cloud.experitest.com/repo/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -19,6 +35,15 @@
             <artifactId>java-client</artifactId>
             <version>4.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.experitest</groupId>
+            <artifactId>appium</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+
+
     </dependencies>
     
 </project>
